precised titles for BORDERTOP

--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                     <section>
                         <h3>Border Top</h3>
                         <div class="rules-container">
-                            <h4>BORDERTOP</h4>
+                            <h4>BORDERTOP1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1015,7 +1015,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERTOP</h4>
+                            <h4>BORDERTOP2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1024,7 +1024,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERTOP</h4>
+                            <h4>BORDERTOP3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1033,7 +1033,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERTOP</h4>
+                            <h4>BORDERTOP4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1042,7 +1042,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERTOP</h4>
+                            <h4>BORDERTOP5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
