precised titles for BORDERRIGHT

--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
                     <section>
                         <h3>Border Right</h3>
                         <div class="rules-container">
-                            <h4>BORDERRIGHT</h4>
+                            <h4>BORDERRIGHT1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1065,7 +1065,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT</h4>
+                            <h4>BORDERRIGHT2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1074,7 +1074,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT</h4>
+                            <h4>BORDERRIGHT3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1083,7 +1083,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT</h4>
+                            <h4>BORDERRIGHT4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1092,7 +1092,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT</h4>
+                            <h4>BORDERRIGHT5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
