precised titles for BORDERBOTTOM

--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
                     <section>
                         <h3>Border Bottom</h3>
                         <div class="rules-container">
-                            <h4>BORDERBOTTOM</h4>
+                            <h4>BORDERBOTTOM1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1115,7 +1115,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM</h4>
+                            <h4>BORDERBOTTOM2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1124,7 +1124,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM</h4>
+                            <h4>BORDERBOTTOM3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1133,7 +1133,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM</h4>
+                            <h4>BORDERBOTTOM4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1142,7 +1142,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM</h4>
+                            <h4>BORDERBOTTOM5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
