precised titles for BORDERLEFT

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                     <section>
                         <h3>Border Left</h3>
                         <div class="rules-container">
-                            <h4>BORDERLEFT</h4>
+                            <h4>BORDERLEFT1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1165,7 +1165,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERLEFT</h4>
+                            <h4>BORDERLEFT2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1174,7 +1174,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERLEFT</h4>
+                            <h4>BORDERLEFT3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1183,7 +1183,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERLEFT</h4>
+                            <h4>BORDERLEFT4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1192,7 +1192,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDERLEFT</h4>
+                            <h4>BORDERLEFT5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
