precised titles for BORDER

--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@
                     <section>
                         <h3>Border All</h3>
                         <div class="rules-container">
-                            <h4>BORDER</h4>
+                            <h4>BORDER1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1215,7 +1215,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDER</h4>
+                            <h4>BORDER2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1224,7 +1224,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDER</h4>
+                            <h4>BORDER3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1233,7 +1233,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDER</h4>
+                            <h4>BORDER4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -1242,7 +1242,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>BORDER</h4>
+                            <h4>BORDER5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
