improved rule block

--- a/index.html
+++ b/index.html
@@ -1589,11 +1589,16 @@
                         <div class="rules-container">
                             <h4>SMALLCAPS</h4>
                             <div class="rule-container">
-                                <div style="background-color:red">
+                                <div class="rule-text">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
                                 </div>
-                                <div style="background-color:blue">
-                                    Salut
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                    <div class="SMALLCAPS">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1617,11 +1622,16 @@
             <div class="rules-container">
             <h4>Titre</h4>
             <div class="rule-container">
-            <div style="background-color:red">
+            <div class="rule-text">
             Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
             </div>
-            <div style="background-color:blue">
-            Salut
+            <div class="rule-show">
+            <div>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            </div>
+            <div class="SMALLCAPS">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            </div>
             </div>
             </div>
             </div>
