--- a/index.html
+++ b/index.html
@@ -2054,7 +2054,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="MONOSPACE">
+                                    <div class="SERIF">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
@@ -2068,7 +2068,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="MONOSPACE">
+                                    <div class="SANSSERIF">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
