precised titles for font colors

--- a/index.html
+++ b/index.html
@@ -1965,7 +1965,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLACK">
+                                    <div class="RED">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
@@ -1979,7 +1979,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLACK">
+                                    <div class="GREEN">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
@@ -1993,7 +1993,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLACK">
+                                    <div class="BLUE">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
@@ -2007,7 +2007,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLACK">
+                                    <div class="YELLOW">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
@@ -2035,7 +2035,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLACK">
+                                    <div class="WHITE">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
