precised titles for font styles

--- a/index.html
+++ b/index.html
@@ -1946,7 +1946,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="ITALIC">
+                                    <div class="OBLIQUE">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
