precised titles for font weights

--- a/index.html
+++ b/index.html
@@ -1899,7 +1899,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BOLD">
+                                    <div class="BOLDER">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
@@ -1913,7 +1913,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BOLD">
+                                    <div class="LIGHTER">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
