ajout d'un tableau

--- a/test2.html
+++ b/test2.html
@@ -253,6 +253,25 @@
             <td>Cli Cli</td>
         </tr>
     </table>
+    <div class="iwannabeatable">
+        <div class="imthetablechild">
+            <div class="imthetablechild">lol</div>
+            <div class="imthetablechild">lol</div>
+            <div class="imthetablechild">lol</div>
+        </div>
+        <div class="imthetablechild">
+            <div class="imthetablechild">lol</div>
+            <div class="imthetablechild">lol</div>
+            <div class="imthetablechild">lol</div>
+        </div>
+        <div class="imthetablechild">
+            <div class="imthetablechild">lol</div>
+            <div class="imthetablechild">lol</div>
+            <div class="imthetablechild">lol</div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
