implemented 3 grey font colors

--- a/index.html
+++ b/index.html
@@ -1651,6 +1651,39 @@
                                     </div>
                                 </div>
                             </div>
+                            <h4>GREY25</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="GREY25">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>GREY50</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="GREY50">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>GREY75</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="GREY75">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
                             <h4>WHITE</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
