implemented background colors

--- a/index.html
+++ b/index.html
@@ -1596,101 +1596,205 @@
                     <section>
                         <h3>Font Colors</h3>
                         <div class="rules-container">
-                            <h4>RED</h4>
+                            <h4>FONTRED</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="RED">
+                                    <div class="FONTRED">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>GREEN</h4>
+                            <h4>FONTGREEN</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="GREEN">
+                                    <div class="FONTGREEN">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>BLUE</h4>
+                            <h4>FONTBLUE</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLUE">
+                                    <div class="FONTBLUE">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>YELLOW</h4>
+                            <h4>FONTYELLOW</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="YELLOW">
+                                    <div class="FONTYELLOW">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>BLACK</h4>
+                            <h4>FONTBLACK</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BLACK">
+                                    <div class="FONTBLACK">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>GREY25</h4>
+                            <h4>FONTGREY25</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="GREY25">
+                                    <div class="FONTGREY25">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>GREY50</h4>
+                            <h4>FONTGREY50</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="GREY50">
+                                    <div class="FONTGREY50">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>GREY75</h4>
+                            <h4>FONTGREY75</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="GREY75">
+                                    <div class="FONTGREY75">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>WHITE</h4>
+                            <h4>FONTWHITE</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="WHITE">
+                                    <div class="FONTWHITE">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <h3>Background Colors</h3>
+                        <div class="rules-container">
+                            <h4>BACKRED</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKRED">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKGREEN</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKGREEN">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKBLUE</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKBLUE">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKYELLOW</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKYELLOW">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKBLACK</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKBLACK">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKGREY25</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKGREY25">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKGREY50</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKGREY50">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKGREY75</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKGREY75">
+                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    </div>
+                                </div>
+                            </div>
+                            <h4>BACKWHITE</h4>
+                            <div class="rule-container">
+                                <div class="rule-show">
+                                    <div>
+                                        Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                    </div>
+                                    <div class="BACKWHITE">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
